Stay Page Initiated, simple layouts have been implemented for it.
custom cards have also been implemented, layout could possibly change.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.DevRightStillbaaiTourism"
         tools:targetApi="31">
         <activity
+            android:name=".Stay"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
