Added the navigation on Stay. Enabled view.Binding. Added more Strings. Added a menu with 3 items. Added the header for the menu.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
 android {
     namespace 'com.example.devright_stillbaaitourism'
     compileSdk 33
+    viewBinding.enable = true
 
     defaultConfig {
         applicationId "com.example.devright_stillbaaitourism"
