[Eat] Container transform transition implemented on list item clicked

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.transition:transition:1.4.1'
+
+
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
