--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,15 @@ android {
 }
 
 dependencies {
+    // Transition
     implementation 'androidx.transition:transition:1.4.1'
+    // Image retrieval
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
