Encapsulated burger menu. Made modifications to XML files.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" />
+        <activity
+            android:name=".Stay"
+            android:exported="true" />
         <activity
             android:name=".DetailActivity"
             android:exported="false" />
