--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
 android {
     namespace 'com.example.devright_stillbaaitourism'
     compileSdk 33
@@ -16,6 +19,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Set API keys in BuildConfig
+        buildConfigField("String", "STIL_USERNAME", "\"${properties.getProperty("STIL_USERNAME")}\"")
+        buildConfigField("String", "STIL_PASSWORD", "\"${properties.getProperty("STIL_PASSWORD")}\"")
     }
 
     buildTypes {
