--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".ActivitiesDetailActivity"
+            android:exported="true" >
+        </activity>
         <activity
             android:name=".Stay"
             android:exported="true" >
