--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
             android:exported="true" >
 
         </activity>
+
+        <activity
+            android:name=".BusinessDetail"
+            android:exported="true" >
+
+        </activity>
     </application>
 
 </manifest>
