Stay details updated. Stay details are displayed dynamically according to their information each have

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,11 @@
             android:exported="true" >
 
         </activity>
+        <activity
+            android:name=".StayDetail"
+            android:exported="true" >
+
+        </activity>
     </application>
 
 </manifest>
