Event detail activity added. Details are dynamically added according to available information

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,12 @@
             android:exported="true" >
 
         </activity>
+        <activity
+            android:name=".EventDetail"
+            android:exported="true" >
+
+        </activity>
+
     </application>
 
 </manifest>
