--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 Properties properties = new Properties()
@@ -55,6 +56,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
+
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     //SQLDroid for JDBC
     implementation 'org.sqldroid:sqldroid:1.0.3'
@@ -78,4 +84,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //firebase push notifications
+    //implementation 'com.google.firebase:firebase-messaging:20.2.4'
 }
